webook-server/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-mysql
spec:
  selector:
    app: webook-mysql
  ports:
    - protocol: TCP
      port: 13306 # 外部访问端口
      targetPort: 3306 # 与 Pod 的 containerPort 对应
  type: LoadBalancer
