webook-server/k8s-webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook
spec:
  type: LoadBalancer # 负载均衡器
  selector:
    app: webook
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
#    - protocol: TCP # 一般 nginx 做
#      name: https
#      port: 443
#      targetPort: 8080
