webook-server/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: live.webook.com
      http:
        paths:
          - backend:
              service:
                name: webook
                port:
                  number: 80
            pathType: Prefix
            path: / # path = / 的时候转发到 webook 服务
